option('fuzzer',
  type: 'boolean',
  value: false)

option('liblfi',
  type: 'string',
  value: 'standard',
  description: 'liblfi configuration (standard, small)')

option('liblfi-threads',
  type: 'boolean',
  value: true,
  description: 'liblfi: enable use of threads and futexes')

option('liblfi-max_futex',
  type: 'integer',
  min: 1,
  max: 16384,
  value: 512,
  description: 'liblfi: maximum number of futexes per process')

option('liblfi-host',
  type: 'string',
  value: 'linux',
  description: 'liblfi: host platform')

option('liblfi-only',
  type: 'boolean',
  value: false,
  description: 'only build liblfi/lfi-run and no compiler tools')

option('liblfi-tests',
  type: 'boolean',
  value: true,
  description: 'build liblfi tests')

option('liblfi-gdb',
  type: 'boolean',
  value: false, description: 'build liblfi with GDB support')

option('liblfi-dlopen',
  type: 'boolean',
  value: false, description: 'allow liblfi to be linked with a library that is dlopenable (requires --sys-external)')

option('tools-only',
  type: 'boolean',
  value: false,
  description: 'only build compiler tools and not liblfi/lfi-run')
