[package]
name = "lfi-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lfi"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "lfi-verify"
path = "src/main.rs"

[dependencies]

xmas-elf = "0.8"
bad64 = "0.6.0"
peekmore = "1.3.0"

# [profile.release]
# opt-level = 3
# lto = true
